--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "node-fetch": "^2.6.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "cache-manager": "^3.6.1",
+    "cache-manager-redis-store": "^2.0.0"
   },
   "devDependencies": {
-    "@nestjs/axios": "^0.0.7",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -48,8 +49,6 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "cache-manager": "^3.6.1",
-    "cache-manager-redis-store": "^2.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
